Updates to business model

--- a/about.html
+++ b/about.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4036573018187490"
+     crossorigin="anonymous"></script>
     </head>
 
     <body>
@@ -43,12 +45,12 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/websites.html">
                                 Website Development
                             </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
+                            <!-- <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
                                 Online Tools
                             </a>
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
                                 Graphic Design
-                            </a>
+                            </a> -->
                         </div>
                     </div>
 
@@ -102,16 +104,16 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Kingdom Application Solutions LLC is a software development company that strives to glorify God through the creation and distribution of quality mobile apps, online software tools, and websites for churches, Christian ministries, and individual Christians. <br><br> 
+                    Kingdom Application Solutions LLC is a software development company that strives to glorify God through the creation and distribution of quality mobile apps, website design & development, and online software products. <br><br> 
 
-                    Our goal is to provide quality mobile apps, online software tools for various ministry purposes, and website development either through a content management system or with custom HTML to deploy to your domain. Our user-friendly mobile apps will be deployed on both the Google Play Store and the Apple App Store.
+                    Our goal is to provide quality mobile apps, website development either through a content management system or with custom HTML to deploy to your domain, and subscription-based online software products. Our user-friendly mobile apps will be deployed on both the Google Play Store and the Apple App Store.
                 </h2><br>
                 <h1 class="title">
                     Our Founder
                 </h1>
                 <p></p>
                 <h2 class="subtitle privacy-h2">
-                    My name is Justin Owens. I am a former missionary in Estonia and Ukraine and former pastor in Texas. I have been developing for the web since the early 2000s and have been deploying mobile apps since 2019. I have designed multiple websites and managed content management systems for ministry organizations as well as deployed a number of mobile apps to the Google Play Store and the Apple App Store. I am passionate about designing quality user-friendly websites and mobile apps to aid in building the Kingdom and growing individual Christians!
+                    My name is Justin Owens. I am a former missionary in Estonia and Ukraine and former pastor in Texas. I have been developing for the web since the early 2000s and have been deploying mobile apps since 2019. I have designed multiple websites and managed content management systems for ministry organizations as well as deployed a number of mobile apps to the Google Play Store and the Apple App Store. I am passionate about designing quality mobile apps and developing user-friendly websites that glorify God and help people!
                 </h2><br>
                 <div class="columns is-centered">
                     <div class="column is-half">
