--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4036573018187490"
+     crossorigin="anonymous"></script>
     </head>
 
     <body>
@@ -43,12 +45,12 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/websites.html">
                                 Website Development
                             </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
+                            <!-- <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
                                 Online Tools
                             </a>
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
                                 Graphic Design
-                            </a>
+                            </a> -->
                         </div>
                     </div>
 
@@ -102,7 +104,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    We are excited to hear from you and how we can work with you for building the kingdom of God! Please fill out the contact form below and we will get back with you as soon as we can!
+                    We are excited to hear from you and how we can work with you to aid in your software needs! Please fill out the contact form below and we will get back with you as soon as we can!
                 </h2>
             
                 <form id="contactForm" action="mail.php" method="POST">
@@ -132,10 +134,10 @@
                                     </option>
                                     <option>Website Development
                                     </option>
-                                    <option>Online Tools
+                                    <!-- <option>Online Tools
                                     </option>
                                     <option>Graphic Design
-                                    </option>
+                                    </option> -->
                                     <option>Pricing Question(s)</option>
                                     <option>Privacy Policy Question(s)</option>
                                 </select>
