--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4036573018187490"
+     crossorigin="anonymous"></script>
     </head>
 
     <body>
@@ -43,12 +45,12 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/websites.html">
                                 Website Development
                             </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
+                            <!-- <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
                                 Online Tools
                             </a>
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
                                 Graphic Design
-                            </a>
+                            </a> -->
                         </div>
                     </div>
 
@@ -93,7 +95,7 @@
                 <div class="container">
                     <img class="home-image" src="./images/header.png" width="500" alt="Our logo">
                     <h1 class="title white-text">
-                        Custom Websites and Mobile Apps for Your Church, Ministry, or Personal Growth!
+                        Glorifying God Through the Development of Quality Software Applications!
                     </h1><br>
                 </div>    
             </div>     
@@ -107,7 +109,7 @@
                             Who We Are
                         </h2>
                         <h4 class="subtitle">
-                            We are a software development company that strives to glorify God through the creation and distribution of quality mobile apps, online software tools, and websites for churches, Christian ministries, and individual Christians.
+                            We are a software development company that strives to glorify God through the creation and distribution of quality mobile apps and website design & development. 
                         </h4>
                         <h4 class="subtitle">
                             Our four core values are:
@@ -142,7 +144,8 @@
                             Mobile Apps
                         </h2>
                         <h4 class="subtitle">
-                            We offer mobile apps that provide opportunities for churches, Christian ministries, or individual Christians to use day-to-day in their lives to aid in deeping their walk with Jesus as well as aiding in leading others to faith in Jesus. These mobile apps are developed for both Android and Apple and deployed to the Google Play Store and/or the Apple App Store.
+                            We offer mobile app solutions that solve problems and try to make life easier. These apps cover a wide range of genres including tech, church/ministry, and health. Most of our apps are free with subscription options for more features. Each of our mobile apps are developed for both Android and Apple and deployed to the Google Play Store and the Apple App Store. <br><br>
+                            Along with our own apps, we also offer the creation of custom mobile apps for individuals or businesses. Check the button below for pricing information.
                         </h4>
                         <a class="button info-button" href="https://kingdomappsolutions.tech/apps.html">
                         <b>Learn More</b>
@@ -160,7 +163,7 @@
                             Website Development
                         </h2>
                         <h4 class="subtitle">
-                            We offer the design and development of custom websites for churches, Christian ministries, or individual Christians. We also offer the creation of websites through popular content manangement options.
+                            We offer the design and development of custom websites for anyone interested in having a quality-made website. We also offer the creation of websites through popular content manangement options. Along with design and development, we offer the maintenance and updating either of a site we created or one you created through a yearly subscription service.
                         </h4>
                         <a class="button info-button" href="https://kingdomappsolutions.tech/websites.html">
                             <b>Learn More</b>
@@ -173,7 +176,7 @@
             </div>
         </section><hr>
 
-        <section class="hero section-padding">
+        <!-- <section class="hero section-padding">
             <div class="hero-body">
                 <div class="columns is-centered">
                     <div class="column is-half">
@@ -181,7 +184,7 @@
                     </div>
                     <div class="column">
                         <h2 class="subtitle privacy-h3">
-                            Online Software Tools
+                            Online Software Products
                         </h2>
                         <h4 class="subtitle">
                             We offer online software tools which are designed to bring you deeper into a relationship with Jesus Christ and give you the tools to lead others deeper as well. These online tools will be available through subscriptions (billed annually) for each of the available tools or in bundle deals.
@@ -213,7 +216,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <footer class="myfooter">
             <div class="content has-text-centered">
