--- a/mission-vision-values.html
+++ b/mission-vision-values.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
+        <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4036573018187490"
+     crossorigin="anonymous"></script> -->
     </head>
 
     <body>
@@ -43,12 +45,12 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/websites.html">
                                 Website Development
                             </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
+                            <!-- <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
                                 Online Tools
                             </a>
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
                                 Graphic Design
-                            </a>
+                            </a> -->
                         </div>
                     </div>
 
@@ -105,14 +107,14 @@
                 </h1>
                 <p></p>
                 <h2 class="subtitle">
-                    Kingdom Application Solutions LLC exists to glorify God through the creation and distribution of quality mobile apps, online software tools, graphic design, and websites for churches, Christian ministries, and individual Christians.
+                    Kingdom Application Solutions LLC exists to glorify God through the creation and distribution of quality mobile apps and website design & development. 
                 </h2><br><hr>
                 <h1 class="title">
                     Our Vision
                 </h1>
                 <p></p>
                 <h2 class="subtitle">
-                    Kingdom Application Solutions LLC envisions a global impact from its mobile apps, online software tools, graphic design, and websites to aid in bringing people into a saving relationship with Jesus and helping other followers of Jesus to grow in their faith.
+                    Kingdom Application Solutions LLC envisions a global impact from its mobile apps and website design and development. We envision aiding organizations and individuals in accomplishing their goals through quality software development. 
                 </h2><br><hr>
                 <h1 class="title">
                     Our Values
@@ -159,7 +161,7 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    To exalt Christ in all things is the goal of every piece of software that we offer. This value drives our mission and vision so that Christ would be exalted, his name made great through the software we offer, and people would grow to be like him (Phil. 2:9-10).
+                                    To exalt Christ in all things is the goal of every piece of software that we offer. This value drives our mission and vision so that Christ would be exalted and his name made great through the software we offer <br> (Phil. 2:9-10).
                                 </div>
                             </div>
                         </div>
@@ -173,7 +175,7 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    As our name implies, we are a kingdom focused company that seeks to help churches, Christian ministries, and individual Christians through the creation of software. Seeking his kingdom and growing the kingdom is what we are all about (Matt. 6:33)!
+                                    As our name implies, we are a kingdom focused company that seeks to help organizations and individuals through the creation of software. Seeking his kingdom and growing the kingdom is what we are all about (Matt. 6:33)!
                                 </div>
                             </div>
                         </div>
