--- a/privacy.html
+++ b/privacy.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4036573018187490"
+     crossorigin="anonymous"></script>
     </head>
 
     <body>
@@ -43,12 +45,12 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/websites.html">
                                 Website Development
                             </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
+                            <!-- <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
                                 Online Tools
                             </a>
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
                                 Graphic Design
-                            </a>
+                            </a> -->
                         </div>
                     </div>
 
@@ -105,7 +107,7 @@
                     Last updated: April 07, 2022
                 </h2>
                 <h2 class="subtitle privacy-h2">
-                    Part of being a software development company is to describe how we use information from users for the products and services we offer. As a Christian software company, we feel that this policy is important and necessary to stay true to our values. Kingdom Application Solutions LLC understands the need for user privacy as well as the safe use of collected data. The privacy policy below spells out in detail how your information is used for any product or service we offer.
+                    Part of being a software development company is to describe how we use information from users for the products and services we offer. As a software company that seeks to glorify God, we feel that this policy is important and necessary to stay true to our values. Kingdom Application Solutions LLC understands the need for user privacy as well as the safe use of collected data. The privacy policy below spells out in detail how your information is used for any product or service we offer.
                 </h2>
                 <h2 class="subtitle privacy-h2">
                     This privacy policy describes the collection, use, protection, disclosure, correction, and deletion of your personal information by Kingdom Application Solutions LLC. Please take a moment to read the following to learn more about our information practices, including what type of information is gathered, how the information is used and for what purposes, to whom we disclose the information, and how we safeguard your personal information. Your privacy is a priority to us and we go to great lengths to protect it.
@@ -129,7 +131,7 @@
                             <b>Account</b> means a unique account created for you to access our service or parts of our service.
                         </li><br>
                         <li>
-                            <b>Company</b> (referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to Kingdom Application Solutions LLC, 139 Cantle, Waxahachie, TX 75165.
+                            <b>Company</b> (referred to as either "the Company", "We", "Us" or "Our" in this Agreement) refers to Kingdom Application Solutions LLC, Waxahachie, TX 75165.
                         </li><br>
                         <li>
                             <b>Country</b> refers to: Texas, United States
