--- a/websites.html
+++ b/websites.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4036573018187490"
+     crossorigin="anonymous"></script>
     </head>
 
     <body>
@@ -43,12 +45,12 @@
                             <a class="navbar-item is-active" href="https://kingdomappsolutions.tech/websites.html">
                                 Website Development
                             </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
+                            <!-- <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
                                 Online Tools
                             </a>
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
                                 Graphic Design
-                            </a>
+                            </a> -->
                         </div>
                     </div>
 
@@ -92,7 +94,7 @@
             <div class="hero-body">
                 <div class="container">
                     <h1 class="title white-text">
-                        Custom Websites Built for Your Church or Ministry in Mind!
+                        Custom Websites Built for Your Organization in Mind!
                     </h1>
                     <img class="home-image" src="./images/header.png" width="300" alt="Logo">
                 </div>
@@ -102,11 +104,11 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Along with mobile apps, website development is one of the primary products Kingdom Application Solutions LLC offers. A website is the first place people will visit when checking out a church so it is a vital piece of any church's or ministry's outreach. Websites should look nice not only on a computer, but also on mobile phones. A well-made website provides another excellent medium to share the good news of Jesus and to help people grow as Christians or to help others engage in discipleship efforts.
+                    Along with mobile apps, website development is one of the primary products Kingdom Application Solutions LLC offers. A website is the first place people will visit when checking out an organization so it is a vital piece of any organization's marketing plan. Websites should look nice not only on a computer, but also on mobile phones. A well-made website illustrates to others that you take their business seriously.
                 </h2><br>
                 <p></p>
                 <h2 class="subtitle privacy-h2">
-                    A custom website for your church or ministry can enable you to effectively communicate with your church, explain information about your church, and connect others with Jesus Christ. Listed below are the two website development packages Kingdom Application Solutions LLC offers to get your church or ministry website up and running. You can choose from a content management system (CMS) such as Weebly or a more custom website. Contact us through the contact page if your are interested in website development for your church or ministry.
+                    A custom website for your organization can enable you to effectively communicate with your target area, niche, or customers. Listed below are the two website development packages Kingdom Application Solutions LLC offers to get your organizational website up and running. You can choose from a content management system (CMS) such as Weebly or a more custom website. Contact us through the contact page if your are interested in website development for your organization.
                 </h2><br>
                 <h1 class="title">
                     Pricing
