--- a/apps.html
+++ b/apps.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4036573018187490"
+     crossorigin="anonymous"></script>
     </head>
 
     <body>
@@ -43,12 +45,12 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/websites.html">
                                 Website Development
                             </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
+                            <!-- <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
                                 Online Tools
                             </a>
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
                                 Graphic Design
-                            </a>
+                            </a> -->
                         </div>
                     </div>
 
@@ -92,7 +94,7 @@
             <div class="hero-body">
                 <div class="container">
                     <h1 class="title white-text">
-                        Mobile Apps to Help You Grow in Your Faith and to Lead Others to Jesus!
+                        Quality Mobile Application Development
                     </h1>
                     <img class="home-image" src="./images/header.png" width="300" alt="Logo">
                 </div>
@@ -102,13 +104,13 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Mobile app development is one of the primary products Kingdom Application Solutions LLC offers. With the proclivity of mobile phones and their use, mobile apps provide an excellent medium to share the good news of Jesus and to help people grow as Christians or to help others engage in discipleship efforts.
+                    Mobile app development is one of the primary products Kingdom Application Solutions LLC offers. With the proclivity of mobile phones and their use, mobile apps and mobile software products are used by people around the world. Our apps seek to provide answers to problems our users face whether it be technical issues, health related, or church/ministry related.
                 </h2><br>
                 <h1 class="title">
-                    App Products We Offer
+                    Current Products
                 </h1>
                 <div class="columns">
-                    <div class="column">
+                    <div class="column is-half is-offset-one-quarter">
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
@@ -131,7 +133,7 @@
                             </footer>
                         </div>
                     </div>
-                    <div class="column">
+                    <!-- <div class="column">
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
@@ -141,12 +143,12 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    Simple Discipleship is currently in production and is the companion app to Simple Evangelism. The app offers several simple discipleship methods that help believers make disciples who make disciples (Matt. 28:18-20). <br><br> Simple Discipleship will be offered in the app stores later this year.
+                                    Simple Discipleship is currently in production and is the companion app to Simple Evangelism. The app offers several simple discipleship methods that help believers make disciples who make disciples (Matt. 28:18-20). <br><br> Simple Discipleship will be offered in the app stores at a later date.
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="column">
+                    </div> -->
+                    <!-- <div class="column">
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
@@ -160,8 +162,8 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="column">
+                    </div> -->
+                    <!-- <div class="column">
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
@@ -175,14 +177,14 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div><hr>
                 <h1 class="title">
-                    Custom Church or Ministry Apps
+                    Custom App Development
                 </h1>
                 <p></p>
                 <h2 class="subtitle privacy-h2">
-                    A custom mobile app for your church or ministry can enable you to effectively communicate with your church, explain information about your church, and connect others with Jesus Christ. Listed below are the custom app packages Kingdom Application Solutions LLC offers to get your church, ministry, or individual app up and running and deployed to both app stores. Contact us through the contact page if your are interested in custom app development.
+                    A custom mobile app for your business, church/ministry, or personally can enable you to effectively communicate with your target area, niche, or church. Listed below are the custom app packages Kingdom Application Solutions LLC offers to get your organizational or individual app up and running and deployed to both app stores. Contact us through the contact page if you are interested in custom app development.
                 </h2><br>
                 <div class="columns">
                     <div class="column">
