--- a/products-services.html
+++ b/products-services.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
+        <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4036573018187490"
+     crossorigin="anonymous"></script> -->
     </head>
 
     <body>
@@ -43,12 +45,12 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/websites.html">
                                 Website Development
                             </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
+                            <!-- <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
                                 Online Tools
                             </a>
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
                                 Graphic Design
-                            </a>
+                            </a> -->
                         </div>
                     </div>
 
@@ -102,7 +104,7 @@
         <section class="hero section-padding">
             <div class="hero-body">
                 <h2 class="subtitle privacy-h2">
-                    Presently, we offer four main products and services at Kingdom Application Solutions LLC: mobile apps for churches, ministries, and/or individuals, websites for churches, ministries, and/or individuals, online tools for growth and discipleship, and graphic design. Each of these products and services has the goal of leading others to faith in Christ and helping one another to grow in Christ-likeness. Click the link in each card below for more information for each of the products or services we offer.
+                    Presently, we offer two main products and services at Kingdom Application Solutions LLC: mobile application development both for the company and for organizations and individuals, and website design and development for organizations and individuals. Each of these products and services has the goal of helping others in some way and glorifying God through their creation. Click the link in each card below for more information for each of the products or services we offer.
                 </h2><br>
                 <div class="columns is-centered">
                     <div class="column">
@@ -115,7 +117,7 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    We offer mobile apps that provide opportunities for churches, Christian ministries, or individual Christians to use day-to-day in their lives to aid in deeping their walk with Jesus as well as aiding in leading others to faith in Jesus. These mobile apps are developed for both Android and Apple and deployed to the Google Play Store and/or the Apple App Store. <br><br> Several apps are in production and one has already been published on the app stores. Click <u><a href="https://kingdomappsolutions.tech/apps.html">here</a></u> to see more information about the types of mobile apps we offer as well as pricing information for custom mobile development packages we offer. <br><br> For examples of the apps we currently offer, click the buttons below to be taken to the respective app store pages.<br>
+                                    We offer mobile apps that provide solutions to common problems as well as custom app development for organizations and individuals to use day-to-day in their lives. These mobile apps are developed for both Android and Apple and deployed to the Google Play Store and the Apple App Store. <br><br> Several apps are in production and one has already been published on the app stores. Click <u><a href="https://kingdomappsolutions.tech/apps.html">here</a></u> to see more information about the types of mobile apps we offer as well as pricing information for custom mobile app development packages we offer. <br><br> For examples of the apps we currently offer, click the buttons below to be taken to the respective app store pages.<br>
                                 </div>
                             </div>
                             <footer class="card-footer">
@@ -135,14 +137,14 @@
                             </header>
                             <div class="card-content">
                                 <div class="content">
-                                    We offer the design and development of custom websites for churches, Christian ministries, or individual Christians. We primarily do this through the use of HTML, CSS, and JavaScript. We utilize popular custom elements to build a website to meet your needs. <br><br> We also offer the creation of websites through popular content manangement options such as WordPress or Weebly (Square) if that fits your needs better for easy updating. Click <u><a href="https://kingdomappsolutions.tech/websites.html">here</a></u> for information about website development pricing for both custom and content management systems.<br>
+                                    We offer the design and development of custom websites for organizations and individuals. We primarily do this through the use of HTML, CSS, and JavaScript. We utilize popular custom elements to build a website to meet your needs. <br><br> We also offer the creation of websites through popular content manangement options such as WordPress or Weebly (Square) if that fits your needs better for easy updating. Click <u><a href="https://kingdomappsolutions.tech/websites.html">here</a></u> for information about website development pricing for both custom and content management systems.<br>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="columns is-centered">
+                <!-- <div class="columns is-centered">
                     <div class="column">
                         <div class="card">
                             <header class="card-header">
@@ -157,9 +159,9 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
-                    <div class="column">
+                    <!-- <div class="column">
                         <div class="card">
                             <header class="card-header">
                                 <p class="card-header-title is-centered">
@@ -173,7 +175,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
