--- a/success.html
+++ b/success.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
         <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4036573018187490"
+     crossorigin="anonymous"></script>
     </head>
 
     <body onload="redirect()">
@@ -43,12 +45,12 @@
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/websites.html">
                                 Website Development
                             </a>
-                            <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
+                            <!-- <a class="navbar-item" href="https://kingdomappsolutions.tech/tools.html">
                                 Online Tools
                             </a>
                             <a class="navbar-item" href="https://kingdomappsolutions.tech/graphic-design.html">
                                 Graphic Design
-                            </a>
+                            </a> -->
                         </div>
                     </div>
 
